--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@ body {
 
 section {
     display: flex;
+
 }
 
 .one {
-    width: 50%;
+    width: 70%;
     color: aliceblue;
     background-color: black;
+
 
 }
 
@@ -20,19 +22,20 @@ section {
     padding-left: 30%;
 }
 
-.link1 {
 
-    color: aliceblue;
-    text-decoration: none;
-    background-image: linear-gradient(orange, tomato);
-    padding: 10px 40px;
-    border-radius: 10px;
-    margin-top: 1000px;
-
-
-}
 
 .two {
+    padding: 25px;
     border: 10px;
-    border-radius: 50%;
+    border-radius: 10px;
+}
+
+.link1 {
+
+    color: beige;
+    text-decoration: none;
+    background-image: linear-gradient(blue, purple);
+    padding: 10px 40px;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
