--- a/style.css
+++ b/style.css
@@ -39,3 +39,51 @@ section {
     border-radius: 10px;
     margin-bottom: 10px;
 }
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+.cards {
+    width: 20%;
+
+    border-radius: 5px;
+    margin: 40px;
+    box-shadow: 2px 2px 10px black;
+}
+
+.cards:hover {
+    box-shadow: 2px 2px 10px black;
+}
+
+.image img {
+    width: 100%;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+.title {
+    text-align: center;
+    padding: 5px;
+}
+
+.des {
+    text-align: center;
+}
+
+button {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: aliceblue;
+    border: 1px solid black;
+    padding: 30px;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: black;
+    color: aliceblue;
+    transition: .5s;
+
+}
