--- a/style.css
+++ b/style.css
@@ -89,52 +89,18 @@ button:hover {
 }
 
 .box {
+
     margin-left: 150px;
     padding: 5%;
 }
 
-
-.inner-footer {
-    margin: 0;
-    padding: 0;
-    background-color: black;
-}
-
-.social-links {
+.gg {
     display: flex;
-    padding-left: 45%;
+    padding-left: 380px;
 }
 
-.social-links ul {
-    display: flex;
-}
-
-.social-items {
-    list-style: none;
-}
-
-.social-items a {
-    padding: 10px 20px;
-    font-size: 35px;
-    color: aquamarine;
-}
-
-.quick-links {
-    display: flex;
-}
-
-.quick-links ul {
-    display: flex;
-}
-
-.quick-items {
-    list-style: none;
-}
-
-.quick-items a {
-    text-decoration: none;
-    padding: 0px 15px;
-    font-size: 18px;
-    color: aliceblue;
-    background-color: black;
+.gg1 {
+    margin-left: 2%;
+    padding: 2%;
+    padding-left: 50px;
 }
