--- a/style.css
+++ b/style.css
@@ -88,11 +88,7 @@ button:hover {
 
 }
 
-.box {
 
-    margin-left: 150px;
-    padding: 5%;
-}
 
 .gg {
     display: flex;
@@ -103,4 +99,34 @@ button:hover {
     margin-left: 2%;
     padding: 2%;
     padding-left: 50px;
+}
+
+.not {
+    width: 80%;
+    height: 250px;
+    background-color: black;
+    margin: 20px;
+    box-sizing: border-box;
+    font-size: 50px;
+    border-radius: 20px;
+}
+
+.container {
+    width: 70%;
+}
+
+.but {
+    margin-left: 18%;
+    margin-right: 25%;
+    padding: 10px 40px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+
+
+}
+
+.box {
+    display: flex;
+    width: 100%;
 }
