--- a/style.css
+++ b/style.css
@@ -130,3 +130,62 @@ button:hover {
     display: flex;
     width: 100%;
 }
+
+@media only screen and (max-width:688px) {
+    .two {
+        display: flex;
+        flex-direction: column;
+        overflow: visible;
+        width: 280px;
+        margin-left: 8px;
+        padding-bottom: 0;
+        min-height: 700px;
+        justify-content: space-between;
+    }
+
+    .one {
+        position: relative;
+        left: 60px;
+        text-align: center;
+    }
+
+    .one h1 {
+        font-size: 30px;
+    }
+
+    .one p {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .one img {
+        width: 200px;
+        padding-left: 50px;
+
+    }
+
+    .box {
+        display: flex;
+        flex-direction: column;
+
+
+    }
+
+    .cards {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 50px;
+        margin-left: 0;
+        margin-top: 50px;
+    }
+
+    footer {
+        margin-top: 3000px;
+    }
+
+    .gg {
+        flex-direction: column;
+
+    }
+}
