--- a/style2.css
+++ b/style2.css
@@ -1,16 +1,15 @@
 * {
     font-family: 'Poppins', sans-serif;
     margin: 0;
-
 }
 
 .top-banner {
-    border-radius: 35px;
+    border-radius: 25px;
     display: flex;
     background-color: black;
     width: 80%;
     height: 70vh;
-    padding: 30px 50px 30px 50px;
+    padding: 30px 40px 0px 40px;
     color: white;
     margin-left: 8%;
     margin-top: 5%;
@@ -21,7 +20,7 @@
 .top-info {
     padding-left: 5%;
     padding-top: 8%;
-    width: 100%;
+    width: 50%;
 
 }
 
@@ -57,15 +56,14 @@
 
 /* top banner ended */
 .second-part {
-    width: 20%;
+    width: 80%;
     display: flex;
-    margin-left: 5%;
-    height: 1200px;
-    margin-right: 15%;
+    margin-left: 8%;
+    height: 800px;
+    margin-right: 8%;
 }
 
 .menu {
-    margin-left: 5%;
     height: 300px;
     width: 300px;
     background-color: black;
@@ -97,69 +95,42 @@
     color: white;
 }
 
-.blog {
-    border: 1px solid rgba(128, 128, 128, 0.63);
-    border-radius: 12px;
+/* upcoming match start  */
+.matchs {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    height: 200px;
 
 }
 
-.blogs {
-    margin-left: 8%;
+.match {
+    padding: 50px 30px;
+    margin-left: 30px;
+    border: 1px solid grey;
+}
+
+.match-img {
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-row-gap: 5%;
-    grid-column-gap: 3%;
-
 }
 
-.blog img {
-    margin-bottom: 10px;
+.match-top-part p {
+    padding-left: 3vh;
+    padding-right: 3vh;
+    padding-top: 10px;
 }
 
-.blog p {
-    display: inline-block;
-}
+.match-info {
+    padding-top: 30px;
 
-.blog a {
-
-    text-decoration: none;
-    color: black;
-    padding: 5px 10px;
-    border: 2px solid black;
-    display: inline-block;
-}
-
-.blog h3 {
-    display: inline-block;
-    margin-top: 30px;
-    margin-bottom: 5px;
-}
-
-.blog .fa-message {
-    padding-left: 50px;
-}
-
-.blog-info {
-    display: inline-block;
-    padding-left: 15px;
-}
-
-.last-view {
-    text-decoration: none;
-    padding: 10px 15px;
-    background: brown;
-    color: white;
-    width: 100px;
-    border-radius: 15px;
     text-align: center;
-    display: none;
 }
 
-/* blog part ended */
+/* footer start  */
 footer {
-    width: 100%;
-    margin-top: 100px;
+    margin-top: 0px;
     padding-top: 50px;
     text-align: center;
     background-color: black;
@@ -195,6 +166,7 @@ footer {
 
 }
 
+/* footer ended  */
 @media only screen and (max-width:688px) {
     .top-banner {
         display: flex;
@@ -226,26 +198,29 @@ footer {
     .top-image img {
         width: 200px;
         padding-left: 50px;
-
     }
 
     .second-part {
-        display: flex;
         flex-direction: column;
+    }
 
+    .menu {
+        margin-left: 10px;
+    }
+
+    .matchs {
+        grid-template-columns: repeat(1, 1fr);
 
     }
 
-    .blogs {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-row-gap: 50px;
-        margin-left: 0;
+    .match {
         margin-top: 50px;
+        margin-left: 5px;
     }
 
     footer {
-        margin-top: 3000px;
+        margin-top: 1700px;
+        margin-left: 0;
     }
 
     .links {
@@ -303,18 +278,13 @@ footer {
         padding: 10px 70px;
     }
 
-    .blogs {
-        display: grid;
+    .matchs {
         grid-template-columns: repeat(2, 1fr);
-        grid-row-gap: 50px;
-        margin-left: 0;
-        margin-top: 50px;
+        height: 200px;
     }
 
-    .last-view {
-        display: block;
-        height: 30px;
-        margin-top: 300px;
+    .match {
+        margin-left: 10px;
     }
 
     footer {
@@ -327,7 +297,6 @@ footer {
         grid-template-columns: repeat(4, 1fr);
         grid-row-gap: 20px;
     }
-
 }
 
 /* small screen laptop  */
@@ -338,20 +307,6 @@ footer {
 
     .top-info h2 {
         font-size: 40px;
-    }
-
-    .blogs {
-        grid-row-gap: 20px;
-        grid-column-gap: 1%;
-        margin-left: 10px;
-    }
-
-    .blog {
-        width: 275px;
-    }
-
-    .blog>img {
-        width: 275px;
     }
 
     .menu {
@@ -367,5 +322,19 @@ footer {
     .button {
         font-size: 20px;
         margin-top: 15px;
+    }
+
+    .matchs {}
+
+    .match {
+        margin-left: 40px;
+        width: 225px;
+        padding: 50px 5px;
+    }
+
+    .match-top-part {}
+
+    .match-top-part>img {
+        width: 78px;
     }
 }
